--- a/src/scss/path-400.scss
+++ b/src/scss/path-400.scss
@@ -1,174 +1,174 @@
 @media (max-width: 400px) {
     /* scale(5) */
     .path1._biger {
-        transform: translate(-26%, -29%) scale(6) !important;
+        transform: translate3d(-26%, -29%, 0) scale(6) !important;
     }
 
     .path2._biger {
-        transform: translate(34%, 32%) scale(6.1) !important;
+        transform: translate3d(34%, 32%, 0) scale(6.1) !important;
     }
 
     .path3._biger {
-        transform: translate(34%, 43%) scale(6.2) !important;
+        transform: translate3d(34%, 43%, 0) scale(6.2) !important;
     }
 
     .path4._biger {
-        transform: translate(-10%, -28%) scale(6) !important;
+        transform: translate3d(-10%, -28%, 0) scale(6) !important;
     }
 
     .path5._biger {
-        transform:  translate(30%, 14%) scale(6) !important;
+        transform: translate3d(30%, 14%, 0) scale(6) !important;
     }
 
     .path6._biger {
-        transform: translate(32%, -5%) scale(7) !important;
+        transform: translate3d(32%, -5%, 0) scale(7) !important;
     }
 
     .path7._biger {
-        transform:  translate(32%, 10%) scale(6.6)  !important;
+        transform: translate3d(32%, 10%, 0) scale(6.6) !important;
     }
 
     .path8._biger {
-        transform: translate(26%, 27%) scale(5) !important;
+        transform: translate3d(28%, 15%, 0) scale(6) !important;
     }
 
     .path9._biger {
-        transform: translate(37%, 15%) scale(5) !important;
+        transform: translate3d(37%, 15%, 0) scale(5) !important;
     }
 
     .path10._biger {
-        transform: translate(-7%, -15%) scale(5) !important;
+        transform: translate3d(-7%, -15%, 0) scale(5) !important;
     }
 
     .path11._biger {
-        transform: translate(-12%, -19%) scale(5) !important;
+        transform: translate3d(-12%, -19%, 0) scale(5) !important;
     }
 
     .path12._biger {
-        transform: translate(-26%, -22%) scale(5) !important;
+        transform: translate3d(-35%, -46%, 0) scale(6.4) !important;
     }
 
     .path13._biger {
-        transform: translate(10%, -18%) scale(5.5) !important;
+        transform: translate3d(10%, -18%, 0) scale(5.5) !important;
     }
 
     .path14._biger {
-        transform: translate(18%, -14%) scale(6) !important;
+        transform: translate3d(18%, -14%, 0) scale(6) !important;
     }
 
     .path15._biger {
-        transform: translate(29%, 6%) scale(5) !important;
+        transform: translate3d(35%, -5%, 0) scale(6) !important;
     }
 
     .path16._biger {
-        transform: translate(30%, 7%) scale(5) !important;
+        transform: translate3d(30%, 7%, 0) scale(5) !important;
     }
 
     .path17._biger {
-        transform: translate(25%, 3%) scale(5) !important;
+        transform: translate3d(32%, -5%, 0) scale(5.2) !important;
     }
 
     .path18._biger {
-        transform: translate(10%, -13%) scale(7) !important;
+        transform: translate3d(10%, -13%, 0) scale(7) !important;
     }
 
     .path19._biger {
-        transform: translate(26%, 36%) scale(7) !important;
+        transform: translate3d(26%, 36%, 0) scale(7) !important;
     }
 
     .path20._biger {
-        transform: translate(32%, 29%) scale(5) !important;
+        transform: translate3d(29%, 22%, 0) scale(6.5) !important;
     }
 
     .path21._biger {
-        transform: translate(20%, 12%) scale(5) !important;
+        transform: translate3d(24%, 12%, 0) scale(6.5) !important;
     }
 
     .path22._biger {
-        transform: translate(24%, 9%) scale(7) !important;
+        transform: translate3d(24%, 9%, 0) scale(7) !important;
     }
 
     .path23._biger {
-        transform: translate(8%, 0%) scale(6) !important;
+        transform: translate3d(8%, 0%, 0) scale(6) !important;
     }
 
     .path24._biger {
-        transform: translate(14%, -30%) scale(5.3) !important;
+        transform: translate3d(14%, -30%, 0) scale(5.3) !important;
     }
 
     .path25._biger {
-        transform: translate(26%, -14%) scale(5) !important;
+        transform: translate3d(19%, -23%, 0) scale(6.5) !important;
     }
 
     .path26._biger {
-        transform: translate(43%, -5%) scale(5) !important;
+        transform: translate3d(41%, -11%, 0) scale(6) !important;
     }
 
     .path27._biger {
-        transform: translate(16%, 18%) scale(5) !important;
+        transform: translate3d(15%, 5%, 0) scale(6.1) !important;
     }
 
     .path28._biger {
-        transform: translate(33%, -7%) scale(5) !important;
+        transform: translate3d(34%, -19%, 0) scale(4.4) !important;
     }
 
     .path29._biger {
-        transform: translate(41%, 6%) scale(5) !important;
+        transform: translate3d(43%, -14%, 0) scale(6.2) !important;
     }
 
     .path30._biger {
-        transform: translate(-26%, -10%) scale(5) !important;
+        transform: translate3d(-32%, -20%, 0) scale(5.5) !important;
     }
 
     .path31._biger {
-        transform: translate(6%, 6%) scale(5) !important;
+        transform: translate3d(0%, -11%, 0) scale(7.5) !important;
     }
 
     .path32._biger {
-        transform: translate(-16%, -20%) scale(5) !important;
+        transform: translate3d(-16%, -20%, 0) scale(5) !important;
     }
 
     .path33._biger {
-        transform: translate(-16%, -4%) scale(5) !important;
+        transform: translate3d(-16%, -4%, 0) scale(5) !important;
     }
 
     .path34._biger {
-        transform: translate(4%, -6%) scale(5) !important;
+        transform: translate3d(-2.5%, -20%, 0) scale(6.5) !important;
     }
 
     .path35._biger {
-        transform: translate(-34%, -23%) scale(5) !important;
+        transform: translate3d(-37%, -35%, 0) scale(6.2) !important;
     }
 
     .path36._biger {
-        transform: translate(-21%, 1%) scale(5) !important;
+        transform: translate3d(-23%, -16%, 0) scale(6) !important;
     }
 
     .path37._biger {
-        transform: translate(5%, -17%) scale(5) !important;
+        transform: translate3d(0%, -32%, 0) scale(6.4) !important;
     }
 
     .path38._biger {
-        transform: translate(-12%, -13%) scale(5) !important;
+        transform: translate3d(-19%, -30%, 0) scale(6) !important;
     }
 
     .path39._biger {
-        transform: translate(-14%, -14%) scale(5) !important;
+        transform: translate3d(-14%, -14%, 0) scale(5) !important;
     }
 
     .path40._biger {
-        transform: translate(8%, -24%) scale(5) !important;
+        transform: translate3d(3%, -41%, 0) scale(6.2) !important;
     }
 
     .path41._biger {
-        transform: translate(-20%, -28%) scale(5) !important;
+        transform: translate3d(-29%, -47%, 0) scale(6.2) !important;
     }
 
     .path42._biger {
-        transform: translate(36%, 33%) scale(5) !important;
+        transform: translate3d(36%, 33%, 0) scale(5) !important;
     }
 
     .path43._biger {
-        transform: translate(22%, 24%) scale(5) !important;
+        transform: translate3d(18%, 18%, 0) scale(7.4)  !important;
     }
 }
