--- a/src/scss/path-640.scss
+++ b/src/scss/path-640.scss
@@ -1,174 +1,174 @@
 @media (max-width: 640px) {
     /* scale(6) */
     .path1._biger {
-        transform: translate(-26%, -27%)  scale(3.5) !important;
+        transform: translate3d(-26%, -27%, 0) scale(3.5) !important;
     }
 
     .path2._biger {
-        transform: translate(34%, 32%) scale(3.5) !important;
+        transform: translate3d(34%, 32%, 0) scale(3.5) !important;
     }
 
     .path3._biger {
-        transform: translate(33%, 44%) scale(3.7) !important;
+        transform: translate3d(33%, 44%, 0) scale(3.7) !important;
     }
 
     .path4._biger {
-        transform:translate(-10%, -28%)  scale(3.5) !important;
+        transform: translate3d(-10%, -28%, 0) scale(3.5) !important;
     }
 
     .path5._biger {
-        transform:  translate(33%, 13%) scale(3.5) !important;
+        transform: translate3d(33%, 13%, 0) scale(3.5) !important;
     }
 
     .path6._biger {
-        transform: translate(32%, -5%) scale(3.9) !important;
+        transform: translate3d(32%, -5%, 0) scale(3.9) !important;
     }
 
     .path7._biger {
-        transform:  translate(32%, 12%) scale(4)  !important;
+        transform: translate3d(32%, 12%, 0) scale(4) !important;
     }
 
     .path8._biger {
-        transform: translate(26%, 27%) scale(6) !important;
+        transform: translate3d(27%, 20%, 0) scale(3.7) !important;
     }
 
     .path9._biger {
-        transform: translate(37%, 15%) scale(6) !important;
+        transform: translate3d(37%, 15%, 0) scale(6) !important;
     }
 
     .path10._biger {
-        transform: translate(-7%, -15%) scale(6) !important;
+        transform: translate3d(-7%, -15%, 0) scale(6) !important;
     }
 
     .path11._biger {
-        transform: translate(-12%, -19%) scale(6) !important;
+        transform: translate3d(-12%, -19%, 0) scale(6) !important;
     }
 
     .path12._biger {
-        transform: translate(-26%, -22%) scale(6) !important;
+        transform: translate3d(-33%, -41%, 0) scale(3.7) !important;
     }
 
     .path13._biger {
-        transform: translate(10%, -18%) scale(3.6) !important;
+        transform: translate3d(10%, -18%, 0) scale(3.6) !important;
     }
 
     .path14._biger {
-        transform: translate(18%, -17%) scale(4) !important;
+        transform: translate3d(18%, -17%, 0) scale(4) !important;
     }
 
     .path15._biger {
-        transform: translate(29%, 6%) scale(6) !important;
+        transform: translate3d(32%, -2%, 0) scale(3.7) !important;
     }
 
     .path16._biger {
-        transform: translate(30%, 7%) scale(6) !important;
+        transform: translate3d(30%, 7%, 0) scale(6) !important;
     }
 
     .path17._biger {
-        transform: translate(25%, 3%) scale(6) !important;
+        transform: translate3d(30%, -5%, 0) scale(3) !important;
     }
 
     .path18._biger {
-        transform: translate(8%, -11%) scale(4) !important;
+        transform: translate3d(8%, -11%, 0) scale(4) !important;
     }
 
     .path19._biger {
-        transform: translate(26%, 36%) scale(6) !important;
+        transform: translate3d(26%, 36%, 0) scale(6) !important;
     }
 
     .path20._biger {
-        transform: translate(32%, 29%) scale(6) !important;
+        transform: translate3d(30%, 24%, 0) scale(3.7) !important;
     }
 
     .path21._biger {
-        transform: translate(20%, 12%) scale(6) !important;
+        transform: translate3d(24%, 12%, 0) scale(4.5) !important;
     }
 
     .path22._biger {
-        transform: translate(24%, 8%) scale(4.5) !important;
+        transform: translate3d(24%, 8%, 0) scale(4.5) !important;
     }
 
     .path23._biger {
-        transform: translate(8%, 2%) scale(4) !important;
+        transform: translate3d(8%, 2%, 0) scale(4) !important;
     }
 
     .path24._biger {
-        transform: translate(15%, -38%) scale(3.6) !important;
+        transform: translate3d(15%, -38%, 0) scale(3.6) !important;
     }
 
     .path25._biger {
-        transform: translate(26%, -14%) scale(6) !important;
+        transform: translate3d(21%, -24%, 0) scale(3.6) !important;
     }
 
     .path26._biger {
-        transform: translate(43%, -5%) scale(6) !important;
+        transform: translate3d(41%, -11%, 0) scale(3.5) !important;
     }
 
     .path27._biger {
-        transform: translate(16%, 18%) scale(6) !important;
+        transform: translate3d(15%, 9%, 0) scale(3.7) !important;
     }
 
     .path28._biger {
-        transform: translate(33%, -7%) scale(6) !important;
+        transform: translate3d(33%, -19%, 0) scale(3.7) !important;
     }
 
     .path29._biger {
-        transform: translate(41%, 6%) scale(6) !important;
+        transform: translate3d(42%, -8%, 0) scale(3.6) !important;
     }
 
     .path30._biger {
-        transform: translate(-26%, -10%) scale(6) !important;
+        transform: translate3d(-31%, -23%, 0) scale(3.5) !important;
     }
 
     .path31._biger {
-        transform: translate(6%, 6%) scale(6) !important;
+        transform: translate3d(1%, -6%, 0) scale(4.5) !important;
     }
 
     .path32._biger {
-        transform: translate(-16%, -20%) scale(6) !important;
+        transform: translate3d(-16%, -20%, 0) scale(6) !important;
     }
 
     .path33._biger {
-        transform: translate(-16%, -4%) scale(6) !important;
+        transform: translate3d(-16%, -4%, 0) scale(6) !important;
     }
 
     .path34._biger {
-        transform: translate(4%, -6%) scale(6) !important;
+        transform: translate3d(-1%, -17%, 0) scale(3.8) !important;
     }
 
     .path35._biger {
-        transform: translate(-34%, -23%) scale(6) !important;
+        transform: translate3d(-37%, -35%, 0) scale(3.5) !important;
     }
 
     .path36._biger {
-        transform: translate(-21%, 1%) scale(6) !important;
+        transform: translate3d(-24%, -12%, 0) scale(3.5) !important;
     }
 
     .path37._biger {
-        transform: translate(5%, -17%) scale(6) !important;
+        transform: translate3d(1%, -30%, 0) scale(3.6) !important;
     }
 
     .path38._biger {
-        transform: translate(-12%, -13%) scale(6) !important;
+        transform: translate3d(-18%, -27%, 0) scale(3.6) !important;
     }
 
     .path39._biger {
-        transform: translate(-14%, -14%) scale(6) !important;
+        transform: translate3d(-14%, -14%, 0) scale(6) !important;
     }
 
     .path40._biger {
-        transform: translate(8%, -24%) scale(6) !important;
+        transform: translate3d(3%, -39%, 0) scale(3.5) !important;
     }
 
     .path41._biger {
-        transform: translate(-20%, -28%) scale(6) !important;
+        transform: translate3d(-30%, -45%, 0) scale(3.7) !important;
     }
 
     .path42._biger {
-        transform: translate(36%, 33%) scale(6) !important;
+        transform: translate3d(36%, 33%, 0) scale(6) !important;
     }
 
     .path43._biger {
-        transform: translate(22%, 24%) scale(6) !important;
+        transform: translate3d(19%, 19%, 0) scale(4.2) !important;
     }
 }
