--- a/src/scss/path-768.scss
+++ b/src/scss/path-768.scss
@@ -1,35 +1,35 @@
 @media (max-width: 768px) {
     /* scale(4) */
     .path1._biger {
-        transform: translate3d(-26%, -27%, 0) scale(5.2) !important;
+        transform: translate3d(-24%, -25%, 0) scale(6) !important;
     }
 
     .path2._biger {
-        transform: translate3d(34%, 32%, 0) scale(5.6) !important;
+        transform: translate3d(34%, 31%, 0) scale(5.6) !important;
     }
 
     .path3._biger {
-        transform: translate3d(33%, 44%, 0) scale(5.6) !important;
+        transform: translate3d(33%, 42%, 0) scale(5.6) !important;
     }
 
     .path4._biger {
-        transform: translate3d(-10%, -28%, 0) scale(4.7) !important;
+        transform: translate3d(-10%, -27%, 0) scale(4.55) !important;
     }
 
     .path5._biger {
-        transform: translate3d(30%, 16%, 0) scale(5.3) !important;
+        transform: translate3d(36%, 13%, 0) scale(5.3) !important;
     }
 
     .path6._biger {
-        transform: translate3d(32%, -5%, 0) scale(5.5) !important;
+        transform: translate3d(33%, -2.5%, 0) scale(5.6) !important;
     }
 
     .path7._biger {
-        transform: translate3d(33%, 14%, 0) scale(6.3) !important;
+        transform: translate3d(31%, 14%, 0) scale(7.2) !important;
     }
 
     .path8._biger {
-        transform: translate3d(28%, 20%, 0) scale(5.7) !important;
+        transform: translate3d(26%, 24%, 0) scale(5.8) !important;
     }
 
     .path9._biger {
@@ -45,19 +45,19 @@
     }
 
     .path12._biger {
-        transform: translate3d(-34%, -43%, 0) scale(5.7) !important;
+        transform: translate3d(-33%, -35%, 0) scale(5.95) !important;
     }
 
     .path13._biger {
-        transform: translate3d(10%, -18%, 0) scale(4.8) !important;
+        transform: translate3d(10%, -19%, 0) scale(4.9) !important;
     }
 
     .path14._biger {
-        transform: translate3d(18%, -14%, 0) scale(4.5) !important;
+        transform: translate3d(18%, -11%, 0) scale(5.3) !important;
     }
 
     .path15._biger {
-        transform: translate3d(34%, -2%, 0) scale(5.3) !important;
+        transform: translate3d(29%, 0%, 0) scale(5.5) !important;
     }
 
     .path16._biger {
@@ -65,7 +65,7 @@
     }
 
     .path17._biger {
-        transform: translate3d(32%, -5%, 0) scale(4.4) !important;
+        transform: translate3d(23%, -5%, 0) rotate(2deg) scale(4.45) !important;
     }
 
     .path18._biger {
@@ -73,7 +73,7 @@
     }
 
     .path19._biger {
-        transform: translate3d(26%, 36%, 0) scale(5) !important;
+        transform: translate3d(24%, 33%, 0) scale(5) !important;
     }
 
     .path20._biger {
@@ -81,11 +81,11 @@
     }
 
     .path21._biger {
-        transform: translate3d(24%, 12%, 0) scale(5.5) !important;
+        transform: translate3d(18%, 6%, 0) scale(5.8) !important;
     }
 
     .path22._biger {
-        transform: translate3d(24%, 9%, 0) scale(5) !important;
+        transform: translate3d(25%, 10%, 0) scale(6.5) !important;
     }
 
     .path23._biger {
@@ -93,35 +93,35 @@
     }
 
     .path24._biger {
-        transform: translate3d(12.5%, -30%, 0) scale(4.2) !important;
+        transform: translate3d(13.5%, -36.5%, 0) scale(4.7) !important;
     }
 
     .path25._biger {
-        transform: translate3d(21%, -21%, 0) scale(5.7) !important;
+        transform: translate3d(22%, -25%, 0) scale(5.7) !important;
     }
 
     .path26._biger {
-        transform: translate3d(42%, -9%, 0) scale(5.2) !important;
+        transform: translate3d(43%, -15%, 0) scale(5.5) !important;
     }
 
     .path27._biger {
-        transform: translate3d(16%, 10%, 0) scale(5.6) !important;
+        transform: translate3d(14%, 12%, 0) scale(5.9) !important;
     }
 
     .path28._biger {
-        transform: translate3d(33%, -19%, 0) scale(5.5) !important;
+        transform: translate3d(32%, -16%, 0) scale(5.8) !important;
     }
 
     .path29._biger {
-        transform: translate3d(43%, -8%, 0) scale(5.3) !important;
+        transform: translate3d(40%, -1%, 0) scale(6) !important;
     }
 
     .path30._biger {
-        transform: translate3d(-30%, -21%, 0) scale(5.25) !important;
+        transform: translate3d(-34%, -21%, 0) scale(5.25) !important;
     }
 
     .path31._biger {
-        transform: translate3d(1%, -6%, 0) scale(6.2) !important;
+        transform: translate3d(2%, -2%, 0) scale(7.2) !important;
     }
 
     .path32._biger {
@@ -133,23 +133,23 @@
     }
 
     .path34._biger {
-        transform: translate3d(-2%, -17%, 0) scale(5.7) !important;
+        transform: translate3d(-0.5%, -15%, 0) scale(5.7) !important;
     }
 
     .path35._biger {
-        transform: translate3d(-35%, -31%, 0) scale(5.3) !important;
+        transform: translate3d(-42%, -35%, 0) scale(5.5) !important;
     }
 
     .path36._biger {
-        transform: translate3d(-20%, -11%, 0) scale(5.5) !important;
+       transform: translate3d(-29%, -8%, 0) scale(5.5) !important;
     }
 
     .path37._biger {
-        transform: translate3d(1%, -28%, 0) scale(5.8) !important;
+        transform: translate3d(-1%, -29%, 0) scale(5.8) !important;
     }
 
     .path38._biger {
-        transform: translate3d(-18%, -27%, 0) scale(4.9) !important;
+        transform: translate3d(-18%, -25%, 0) scale(5.1) !important;
     }
 
     .path39._biger {
@@ -161,7 +161,7 @@
     }
 
     .path41._biger {
-        transform: translate3d(-29%, -45%, 0) scale(5.5) !important;
+        transform: translate3d(-28%, -41%, 0) scale(5.5) !important;
     }
 
     .path42._biger {
