--- a/src/scss/rodnik_page.scss
+++ b/src/scss/rodnik_page.scss
@@ -536,6 +536,10 @@
 
         &-slider {
             margin-bottom: 24px;
+            margin-left: -10px;
+            margin-right: -10px;
+            margin-top: -10px;
+            padding: 10px;
 
             @media (min-width: 1097px) {
                 @include adaptive-value("max-width", 694, 110, 1);
@@ -585,9 +589,9 @@
 .feedback-slide {
     &__body {
         background-color: #ffffff;
-        border: 1px solid rgba(0, 81, 130, 0.3);
+        box-shadow: 0px 4px 9px rgba(0, 87, 145, 0.15);
+        border-radius: 10px;
         padding-top: 14px;
-        @include adaptive-value("border-radius", 20, 10, 1);
         @include adaptive-value("padding-right", 32, 22, 1);
         @include adaptive-value("padding-bottom", 27, 17, 1);
         @include adaptive-value("padding-left", 29, 20, 1);
@@ -695,7 +699,6 @@
     }
 }
 
-
 .feedback__form-top,
 .feedback__form-bottom {
     @include adaptive-value("margin-bottom", 25, 10, 1);
@@ -721,7 +724,7 @@
     resize: none;
 }
 
-.feedback__form-bottom textarea::placeholder{
+.feedback__form-bottom textarea::placeholder {
     color: #0079c2;
 }
 
@@ -742,7 +745,7 @@
     justify-content: flex-start;
 }
 
-.feedback__form-overall_score span{
+.feedback__form-overall_score span {
     margin-right: 5px;
 }
 
@@ -816,5 +819,105 @@
     align-items: center;
     & > :not(:last-child) {
         margin-right: 3px;
+    }
+}
+
+.form__privacy {
+    margin-top: 10px;
+    @include adaptive-value("font-size", 14, 10, 1);
+    line-height: 1.22;
+    font-weight: 400;
+    color: #0079c2;
+
+    a {
+        text-decoration: underline;
+        color: inherit;
+    }
+}
+
+.form__output {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 150;
+
+    visibility: hidden;
+    opacity: 0;
+    transform: scale(0);
+    transition: all 0.3s ease 0s;
+
+
+    &-overlay {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 0;
+        cursor: pointer;
+    }
+
+    // .form__output-body
+
+    &-body {
+        position: relative;
+        z-index: 1;
+    }
+
+    // .form__output-close
+
+    &-close {
+        display: block;
+        margin-bottom: 15px;
+        margin-left: auto;
+        transition: all 0.3s ease 0s;
+
+        img,.svg{
+            pointer-events: none;
+        }
+
+        @media (any-hover: hover) {
+            &:hover {
+                transform: rotate(180deg);
+            }
+        }
+    }
+
+    // .form__output-content
+
+    &-content {
+        background-color: #ffffff;
+        box-shadow: 0px 4px 9px rgba(0, 87, 145, 0.15);
+        border-radius: 10px;
+        width: 257px;
+        font-style: normal;
+        font-weight: 600;
+        @include adaptive-value("font-size", 18, 16, 1);
+        line-height: 1.22em;
+        text-align: center;
+        color: #00426a;
+        padding: 32px 15px;
+        position: relative;
+
+        span {
+            background-color: #ffffff;
+            box-shadow: 0px 2.98039px 6.70589px rgba(0, 87, 145, 0.15);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            top: -24px;
+            left: 50%;
+            transform: translate(-50%, 0);
+            border-radius: 50%;
+            width: 48px;
+            height: 48px;
+        }
     }
 }
